# smartmonkey

./: .gitignore  CHANGELOG.md  CHROME_DOM_DELIVERY.md  CHROME_DOM_INDEX.md  CLAUDE.md  DELIVERY_SUMMARY.txt  README.md  auto_responder.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_web_navigation_safe.py  run_web_navigation_test.py  run_web_test.py  setup.py  test_click_and_url.py  test_screenshot_timing.py  test_web_integration.py  test_web_naver.py
docs/: AI_TESTING_GUIDE.md  CHROME_DOM_EXTRACTION.md  CHROME_DOM_SETUP.md  CHROME_INTEGRATION_GUIDE.md  CHROME_VS_NATIVE_COMPARISON.md  CLICK_MARKER_FEATURE.md  GRAFANA_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MCP_SETUP.md  MCP_TESTING.md  QUICK_REFERENCE.md  WEB_INTEGRATION_PLAN.md  index.html  style.css
docs/design/: ARCHITECTURE.md  MODULE_STRUCTURE.md  ROADMAP.md  architecture-analysis-prompt.md  codex-architecture-analysis.txt
docs/images/: GRAFANA_SCREENSHOTS.md  README.md
docs/process/: DEVELOPMENT_LOG.md  FINAL_REPORT.md  PROJECT_FILES.txt  SUMMARY.md
examples/: basic.yaml  chrome_dom_extraction_example.py  login.yaml
grafana/: dashboard-detail.json  dashboard-main.json
smart_monkey/: __init__.py
smartmonkey/: __init__.py
smartmonkey/ai/: __init__.py  claude_code_client.py  workspace_provider.py
smartmonkey/ai/templates/: app_claude.md
smartmonkey/cli/: main.py
smartmonkey/cli/commands/: __init__.py  ai_command.py  (+3 more)
smartmonkey/device/: adb_manager.py  app_manager.py  device.py  event_injector.py  screen_capture.py
smartmonkey/exploration/: action.py  element.py  exploration_engine.py  state.py  ui_parser.py
smartmonkey/mcp/: __init__.py  handlers.py  server.py  tools.py
smartmonkey/reporting/: html_reporter.py  report_generator.py
smartmonkey/utils/: exceptions.py  helpers.py  logger.py
smartmonkey/web/: __init__.py
test-projects/coupang-test/: CLAUDE.md
test_reports/settings_test/: report.json
tests/: conftest.py
(+13 files in other folders)
