[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmonkey"
version = "0.2.1"
description = "Intelligent Android App Testing Tool with AI-Driven Testing & MCP Integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SmartMonkey Development Team"}
]
keywords = ["android", "testing", "automation", "ui-testing", "monkey-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "loguru>=0.7.0",
    "lxml>=4.9.3",
    "networkx>=3.1",
    "jinja2>=3.1.2",
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "Pillow>=10.0.0",
    "psutil>=5.9.5",
    "tqdm>=4.66.1",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.7.0",
    "pylint>=2.17.5",
    "mypy>=1.5.0",
]

[project.scripts]
smartmonkey = "smartmonkey.cli.main:cli"

[tool.setuptools.packages.find]
include = ["smartmonkey*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=smartmonkey --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
max-line-length = 100
